# lama_old

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTORS.md  ChangeLog  Infos  README  README.md
common/: CMakeLists.txt  README  common.hpp
common/common/: CMakeLists.txt  DynArray.hpp  Exception.hpp  Factory.hpp  Factory1.hpp  Factory2.hpp  NonCopyable.hpp  OpenMP.hpp  Printable.hpp  ScalarType.hpp  Thread.cpp  Thread.hpp  Walltime.cpp  Walltime.hpp  bind.hpp  config.hpp  function.hpp  shared_ptr.hpp  unique_ptr.hpp  weak_ptr.hpp
common/examples/: Barrier.cpp  CMakeLists.txt  CommonTest.cpp  ConditionTest.cpp  CriticalRegion.cpp  DemoFactory.cpp  DemoFactory1.cpp  ExceptionDemo.cpp  ExceptionTest.cpp  Factory2Test.cpp  FactoryTest.cpp  MutexTest.cpp
common/src/: Exception.cpp  Printable.cpp  ScalarType.cpp  Thread.cpp
lama/: CMakeLists.txt
lama/lama/: CRTPCommunicator.hpp  CommunicationPlan.hpp  Communicator.cpp  Communicator.hpp  Complex.cpp  DenseVector.cpp  DenseVector.hpp  Distributed.cpp  Distributed.hpp  LAMAArrayUtils.cpp  LAMAArrayUtils.hpp  LAMAArrayView.hpp  LAMAInterface.cpp  LAMATypes.hpp  NoCommunicator.cpp  NoCommunicator.hpp  Scalar.cpp  Scalar.hpp  Settings.hpp  StorageIO.cpp  TypeTraits.hpp  UtilsInterface.hpp  Vector.cpp  Vector.hpp
lama/test/: BLAS1Test.cpp  BLAS2Test.cpp  BLAS3Test.cpp  BiCGstabTest.cpp  CGNRTest.cpp  COOSparseMatrixTest.cpp  COOUtilsTest.cpp  CSRStorageTest.cpp  CSRUtilsTest.cpp  Configuration.cpp  Configuration.hpp  Context.cpp  Context.hpp  ContextTest.cpp  DIASparseMatrixTest.cpp  DIAStorageTest.cpp  DenseMatrixTest1.cpp  DerivedSparseMatrixTest.cpp  ELLSparseMatrixTest.cpp  ELLUtilsTest.cpp  EquationHelper.hpp  FileLoggerTest.cpp  GMRESTest.cpp  InverseSolverTest.cpp  IterationCountTest.cpp  JDSSparseMatrixTest.cpp  JDSStorageTest.cpp  JDSUtilsTest.cpp  JacobiTest.cpp  L1NormTest.cpp  L2NormTest.cpp  LAMAArrayTest.cpp  LAPACKTest.cpp  MatrixStorageConversionTest.cpp  MatrixStorageTest.hpp  MatrixTest.cpp  MaxNormTest.cpp  NoCommunicatorTest.cpp  NormTest.hpp  ResidualStagnationTest.cpp  (+22 more)
logging/: CMakeLists.txt  README  logging.hpp
logging/common/: Exception.hpp  NonCopyable.hpp  config.hpp
logging/examples/: CMakeLists.txt  DemoLogging.cpp  LogOpenMP.cpp  LogTest.cpp  LogThreads.cpp  OpenMPTest.cpp  ThreadTest.cpp  config
logging/logging/: AbstractLoggerCreator.hpp  CMakeLists.txt  GenLogger.cpp  GenLogger.hpp  GenLoggerCreator.cpp  GenLoggerCreator.hpp  Level.hpp  Logger.cpp  Logger.hpp  LoggerProvider.cpp  LoggerProvider.hpp  SourceLocation.cpp  SourceLocation.hpp  Thread.hpp  config.hpp  logging.hpp  thread_ids.hpp
logging/src/: GenLogger.cpp  GenLoggerCreator.cpp  Level.cpp  Logger.cpp  LoggerProvider.cpp  SourceLocation.cpp  Thread.cpp  thread_ids.cpp
memory/: CMakeLists.txt  memory.hpp
memory/examples/: Aliasing.cpp  Array1.cpp  BenchArray.cpp  CMakeLists.txt  ContextTest.cpp  Create.cpp  LAMAArrayTest.cpp  Threading.cpp
memory/memory/: Access.cpp  Access.hpp  BaseAccess.hpp  CMakeLists.txt  Context.hpp  ContextAccess.cpp  ContextAccess.hpp  ContextArray.hpp  ContextData.cpp  ContextData.hpp  ContextDataManager.hpp  ContextManager.hpp  DefaultHostContext.hpp  HostContext.hpp  HostMemory.cpp  HostMemory.hpp  HostReadAccess.hpp  HostWriteAccess.hpp  HostWriteOnlyAccess.hpp  LAMAArray.hpp  LAMAArrayRef.hpp  Memory.cpp  Memory.hpp  ReadAccess.hpp  Scalar.hpp  ScalarType.hpp  SyncToken.hpp  TaskSyncToken.hpp  WriteAccess.hpp  WriteOnlyAccess.hpp  memory.hpp
memory/src/: Access.cpp  Context.cpp  ContextData.cpp  ContextDataManager.cpp  ContextManager.cpp  DefaultHostContext.cpp  HostContext.cpp  HostMemory.cpp  LAMAArray.cpp  Memory.cpp  ReadAccess.cpp  Scalar.cpp  ScalarType.cpp  SyncToken.cpp  TaskSyncToken.cpp  WriteAccess.cpp
memory/test/: CMakeLists.txt  ContextTest.cpp  HostContextTest.cpp  LAMAArrayRefTest.cpp  LAMAArrayTest.cpp  MockContext.hpp  MockMemory.hpp
scai/: CMakeLists.txt  CMakeLists.txt.tb  FindSCAI.cmake.in  SCAIConfig.cmake.in  benchmark.hpp  blaskernel.hpp  boost_check.hpp.in  boost_check.hpp.in_empty  common.hpp  conf.py.in  dmemo.hpp  examples_Makefile.in  examples_make.inc.in  hmemo.hpp  ipbcls.hpp  kregistry.hpp  lama.hpp  lama.hpp.in  lamasolver.hpp  logging.hpp  memory.hpp  partitioning.hpp  run_tests.py  scai_build.sh  scai_code_coverage_functions.sh  scai_test.sh  scai_test_xml.sh  solver.hpp  sparsekernel.hpp  tasking.hpp  test_summary.xslt  tracing.hpp  utilskernel.hpp
scai/benchmark/: BFError.cpp  BFError.hpp  BFException.cpp  BFException.hpp  BaseInputSetRegistry.cpp  BaseInputSetRegistry.hpp  Benchmark.cpp  Benchmark.hpp  BenchmarkPrinter.cpp  BenchmarkPrinter.hpp  BenchmarkRegistry.cpp  BenchmarkRegistry.hpp  BenchmarkRunner  BenchmarkTypes.hpp  CMakeLists.txt  Config.cpp  Config.hpp  InputSet.cpp  InputSet.hpp  InputSetRegistry.hpp  Parser.hpp  RegisteredBenchmarks.cpp  RegisteredInputSets.cpp  RunBenchmark.cpp  frame_stdlib.cpp  frame_stdlib.hpp  macros.hpp  readDir.cpp  readDir.hpp  string_helper.cpp  string_helper.hpp
scai/blaskernel/: BLASKernelTrait.hpp  CMakeLists.txt  MKLUtils.hpp  cblas.hpp
scai/common/: AccessKind.cpp  AccessKind.hpp  Assert.hpp  BinaryOp.hpp  CMakeLists.txt  CompareOp.hpp  Complex.cpp  Complex.hpp  Constants.cpp  Constants.hpp  ContextType.cpp  ContextType.hpp  Exception.cpp  Exception.hpp  Factory.hpp  Factory1.hpp  Grid.cpp  Grid.hpp  LibModule.cpp  LibModule.hpp  Math.cpp  Math.hpp  MathReal.hpp  MatrixOp.hpp  NonCopyable.hpp  OpenMP.hpp  Printable.cpp  Printable.hpp  README  ReductionOp.hpp  SCAIAssert.hpp  SCAITypes.cpp  SCAITypes.hpp  SCAITypes.hpp.in  SCAITypes.hpp.in_withComplex  ScalarType.cpp  ScalarType.hpp  Settings.cpp  Settings.hpp  Stencil.hpp  (+36 more)
scai/dmemo/: AnyAddressing.cpp  AnyAddressing.hpp  BlockDistribution.cpp  BlockDistribution.hpp  BlockPartitioning.cpp  BlockPartitioning.hpp  CMakeLists.txt  CRTPCommunicator.hpp  CollectiveFile.cpp  CollectiveFile.hpp  CommunicationPlan.cpp  Communicator.cpp  (+49 more)
src/: CMakeLists.txt  INSTALL
tasking/: CMakeLists.txt  tasking.hpp
tracing/: CMakeLists.txt  README  tracing.hpp
(+4902 files in other folders)
